src/test/ui/issue-21950.stderr
error[E0393]: the type parameter `RHS` must be explicitly specified
  --> $DIR/issue-21950.rs:17:14
   |
17 |             &Add;
   |              ^^^ missing reference to `RHS`
   |
   = note: because of the default `Self` reference, type parameters must be specified on object types

error[E0191]: the value of the associated type `Output` (from the trait `std::ops::Add`) must be specified
  --> $DIR/issue-21950.rs:17:14
   |
17 |             &Add;
   |              ^^^ missing associated type `Output` value

error: aborting due to 2 previous errors

